--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -18,6 +18,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/database/migrations/.js"],
   "exclude": ["src/tests"]
 }
